--- a/src/AppBundle/Resources/translations/fos_user_bundle.en.yml
+++ b/src/AppBundle/Resources/translations/fos_user_bundle.en.yml
@@ -1,7 +1,3 @@
-connexion.form.title.connexion: "Login"
-connexion.form.url_label.oubli_mot_de_passe: Forgotten password ?
-connexion.form.field_label.mot_de_passe: Password
-connexion.form.field_label.nom_utilisateur: Email
 group:
     edit:
         submit: 'Update group'
@@ -66,6 +62,7 @@ resetting:
         submit: 'Reset password'
     reset:
         submit: 'Change password'
+        password: Reset your password
     flash:
         success: 'The password has been reset successfully.'
     email:
@@ -89,6 +86,11 @@ form:
     group_name: 'Group name'
     username: Username
     email: Email
+    first_name: 'First Name'
+    last_name: 'Last Name'
+    telephone: 'Phone number'
+    fax: 'Fax number'
+    laguage: 'Language'
     current_password: 'Current password'
     password: Password
     password_confirmation: 'Repeat password'
