--- a/src/AppBundle/Resources/translations/fos_user_bundle.en.yml
+++ b/src/AppBundle/Resources/translations/fos_user_bundle.en.yml
@@ -91,6 +91,7 @@ form:
     telephone: 'Phone number'
     fax: 'Fax number'
     laguage: 'Language'
+    roles: 'Roles'
     current_password: 'Current password'
     password: Password
     password_confirmation: 'Repeat password'
