--- a/src/AppBundle/Resources/translations/fos_user_bundle.fr.yml
+++ b/src/AppBundle/Resources/translations/fos_user_bundle.fr.yml
@@ -91,3 +91,6 @@ form:
     password_confirmation: 'Répéter le mot de passe'
     new_password: 'Nouveau mot de passe'
     new_password_confirmation: 'Répéter le nouveau mot de passe'
+user:
+    managment: Gestion des utilisateurs
+    list: Liste des utilisateurs
