FIX: Retrait du role utilisateur client lors du passage de la commande. En effet, l'utilisateur est par dÃ©faut un client donc, n'a pas le droit de se choisir un role.

--- a/src/AppBundle/Resources/translations/fos_user_bundle.en.yml
+++ b/src/AppBundle/Resources/translations/fos_user_bundle.en.yml
@@ -86,7 +86,7 @@ form:
     last_name: 'Prenom'
     telephone: 'Numéro de téléphone'
     fax: 'Numéro de fax'
-    laguage: 'Langue'
+    language: 'Langue'
     roles: 'Roles'
     email: 'Adresse e-mail'
     current_password: 'Mot de passe actuel'
